--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@remix-run/serve": "^2.16.2",
     "@stripe/stripe-js": "^7.0.0",
     "@types/axios": "^0.14.4",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/stripe": "^8.0.417",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
     "isbot": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
